--- a/BusAwesome/BusAwesome-Info.plist
+++ b/BusAwesome/BusAwesome-Info.plist
@@ -30,6 +30,13 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Top</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>AppIcon29x29</string>
+		<string>AppIcon40x40</string>
+		<string>AppIcon60x60</string>
+		<string>AppIcon76x76</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
